Modify Main.browse method
Changed the parameter type of the `Main.browse()` method from `URL` to `URI`, as `URL` constructors have been deprecated since Java 20. This also align with the `Desktop.browse()` method, which requires a `URI` parameter.